--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@ body {
 
 /* 🎂 Ảnh bánh kem to và đẹp hơn */
 #banner img {
-  width: 340px;               /* 👉 To hơn rõ ràng */
-  max-width: 90vw;
+  width: 320px;
   height: auto;
-  border-radius: 50% / 35%;   /* Bo oval mềm mại */
+  border-radius: 50% / 35%;
   box-shadow: 0 0 40px rgba(255,255,255,0.9), 0 0 20px rgba(255,192,203,0.8);
   margin-bottom: 25px;
   animation: cakePop 1.5s ease;
@@ -49,9 +48,8 @@ body {
   transition: transform 0.8s ease;
 }
 #banner img:hover {
-  transform: scale(1.08);     /* Phóng nhẹ khi rê chuột */
+  transform: scale(1.08);
 }
-
 @keyframes cakePop {
   0% { transform: scale(0.3); opacity: 0; }
   100% { transform: scale(1); opacity: 1; }
@@ -74,7 +72,7 @@ body {
   width: 240px;
   text-align: center;
 }
-#nextBtn, #nextImageBtn, #finalNextBtn {
+button {
   margin-top: 16px;
   background: #ff1493;
   border: none;
@@ -85,19 +83,13 @@ body {
   cursor: pointer;
   transition: 0.3s;
 }
-#nextBtn:hover, #nextImageBtn:hover, #finalNextBtn:hover { background: #ff69b4; }
+button:hover { background: #ff69b4; }
 
 #error {
   color: red;
   margin-top: 10px;
   font-weight: bold;
   display: none;
-  animation: shake 0.3s;
-}
-@keyframes shake {
-  0%,100% { transform: translateX(0); }
-  25% { transform: translateX(-5px); }
-  75% { transform: translateX(5px); }
 }
 
 /* --- Trang lời chúc --- */
@@ -122,29 +114,34 @@ h2 {
   line-height: 1.6;
 }
 
-/* --- Trang hình ảnh --- */
-#imagePage {
+/* --- Slide hình ảnh --- */
+.imageSlide {
   display: none;
   position: fixed;
   inset: 0;
   background: #000;
   text-align: center;
-  overflow: hidden;
   color: white;
+  overflow: hidden;
+  animation: fadeIn 1.5s ease;
 }
-#imagePage img {
+.imageSlide img {
   max-width: 90%;
   max-height: 75vh;
   margin-top: 5vh;
   border-radius: 16px;
   box-shadow: 0 0 30px rgba(255,255,255,0.4);
-  animation: fadeIn 1.5s ease;
 }
-#caption {
+.caption {
   font-size: 20px;
   margin-top: 20px;
   text-shadow: 0 0 10px #ff69b4;
   animation: fadeIn 2s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; } 
+  to { opacity: 1; }
 }
 
 canvas {
@@ -182,13 +179,25 @@ canvas {
   <button id="nextImageBtn">Next ➜</button>
 </div>
 
-<!-- Trang hình ảnh -->
-<div id="imagePage">
-  <img src="480591280_1340868617092435_5708492407284149770_n.jpg" alt="Hình ảnh sinh nhật">
-  <p id="caption">
-    🌷 Cô gái trong hình thật dễ thương, ánh mắt hiền lành và nụ cười khiến ai cũng phải mỉm cười 💖
-  </p>
-  <button id="finalNextBtn">Next ➜</button>
+<!-- Slide 1 -->
+<div class="imageSlide" id="slide1">
+  <img src="480591280_1340868617092435_5708492407284149770_n.jpg" alt="">
+  <p class="caption">🌷 Cô gái trong hình thật dễ thương, ánh mắt hiền lành và nụ cười khiến ai cũng phải mỉm cười 💖</p>
+  <button onclick="nextSlide(2)">Next ➜</button>
+</div>
+
+<!-- Slide 2 -->
+<div class="imageSlide" id="slide2">
+  <img src="473306466_1311856953326935_2056956771995249315_n.jpg" alt="">
+  <p class="caption">💐 Dịu dàng như nắng sớm mai,<br>Gặp em một chút, lòng ai xao xuyến 💞</p>
+  <button onclick="nextSlide(3)">Next ➜</button>
+</div>
+
+<!-- Slide 3 -->
+<div class="imageSlide" id="slide3">
+  <img src="gen-n-z7141954342367_af03f507a0077d6d43718aeb398af511.jpg" alt="">
+  <p class="caption">🌸 Duyên dáng, ngọt ngào như hương hoa,<br>Chúc Ngân mãi xinh và vui như hôm nay 💕</p>
+  <button onclick="endSlides()">🎂 Kết thúc 💖</button>
 </div>
 
 <script>
@@ -197,16 +206,12 @@ const nextBtn = document.getElementById("nextBtn");
 const passwordInput = document.getElementById("password");
 const loginDiv = document.getElementById("login");
 const mainDiv = document.getElementById("main");
-const imageDiv = document.getElementById("imagePage");
 const errorMsg = document.getElementById("error");
 
-// 🔑 Mật khẩu chính xác
 const CORRECT_PASS = "123456789Hieu";
 
 nextBtn.addEventListener("click", checkPass);
-passwordInput.addEventListener("keyup", (e)=>{
-  if(e.key === "Enter") checkPass();
-});
+passwordInput.addEventListener("keyup", (e)=>{ if(e.key === "Enter") checkPass(); });
 
 function checkPass(){
   const pass = passwordInput.value.trim();
@@ -220,16 +225,22 @@ function checkPass(){
   }
 }
 
-// ====== Nút Next sang hình ảnh ======
+// ====== Next sang hình ảnh đầu tiên ======
 document.getElementById("nextImageBtn").addEventListener("click", ()=>{
   mainDiv.style.display = "none";
-  imageDiv.style.display = "block";
+  document.getElementById("slide1").style.display = "block";
 });
 
-// ====== Nút Next cuối cùng ======
-document.getElementById("finalNextBtn").addEventListener("click", ()=>{
-  alert("🎂 Cảm ơn bạn đã xem đến đây! Chúc bạn luôn xinh đẹp, vui vẻ và hạnh phúc nhé 💖");
-});
+// ====== Chuyển slide ======
+function nextSlide(num){
+  document.querySelectorAll(".imageSlide").forEach(s => s.style.display="none");
+  document.getElementById(`slide${num}`).style.display = "block";
+}
+
+function endSlides(){
+  document.querySelectorAll(".imageSlide").forEach(s => s.style.display="none");
+  alert("🎉 Hết rồi nè! Chúc Ngân luôn xinh đẹp, vui tươi và thật hạnh phúc 💕");
+}
 
 // ====== Hiệu ứng pháo hoa ======
 function startFireworks(){
@@ -237,11 +248,6 @@ function startFireworks(){
   const ctx = canvas.getContext("2d");
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
-
-  window.addEventListener("resize", ()=>{
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-  });
 
   const particles = [];
   class Particle{
@@ -270,9 +276,7 @@ function startFireworks(){
     const y=Math.random()*canvas.height/2;
     const colors=["#ff4081","#ffd700","#00e676","#00b0ff","#ff6e40"];
     const color=colors[Math.floor(Math.random()*colors.length)];
-    for(let i=0;i<50;i++){
-      particles.push(new Particle(x,y,color));
-    }
+    for(let i=0;i<50;i++) particles.push(new Particle(x,y,color));
   }
 
   function animate(){
