--- a/index.html
+++ b/index.html
@@ -2,297 +2,270 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chúc mừng sinh nhật 🎂</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>🎂 Chúc Mừng Sinh Nhật Nguyễn Thị Kim Ngân 🎉</title>
 <style>
-body {
-  margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(180deg, #ffe6f2, #fff0f5);
-  height: 100vh;
-  overflow: hidden;
-}
+  * { box-sizing: border-box; }
+  body {
+    touch-action: pan-y;
+    -webkit-user-select: none;
+    user-select: none;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background: radial-gradient(circle at top, #ffd6e8, #fff8e6);
+    overflow: hidden;
+  }
+  .page {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 1s ease, transform 1s ease;
+    text-align: center;
+    padding: 20px;
+    transform: translateY(20px);
+  }
+  .page.active {
+    opacity: 1;
+    transform: translateY(0);
+    z-index: 2;
+  }
+  .cake { font-size: 4em; animation: float 3s ease-in-out infinite; }
+  @keyframes float { 0%,100%{transform:translateY(0);}50%{transform:translateY(-12px);} }
+  h1 {
+    color: #ff2e9b;
+    font-size: 2.2em;
+    margin-top: 10px;
+    text-shadow: 0 0 15px #ff8ecf;
+    animation: glow 2s ease-in-out infinite alternate;
+  }
+  @keyframes glow {
+    from { text-shadow: 0 0 15px #ff9bd4; }
+    to { text-shadow: 0 0 30px #ffc1e3; }
+  }
+  p {
+    color: #444;
+    font-size: 1.15em;
+    line-height: 1.8;
+    max-width: 90%;
+  }
+  .btn {
+    background: linear-gradient(45deg, #ff72c6, #ff4da6);
+    color: white;
+    border: none;
+    border-radius: 35px;
+    padding: 12px 26px;
+    font-size: 1.1em;
+    cursor: pointer;
+    margin-top: 25px;
+    box-shadow: 0 4px 15px rgba(255, 77, 166, 0.4);
+    transition: 0.3s;
+  }
+  .btn:hover { transform: scale(1.07); box-shadow: 0 6px 20px rgba(255, 77, 166, 0.55); }
 
-/* --- Màn đăng nhập --- */
-#login {
-  position: fixed;
-  inset: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(135deg, #ffb6c1, #ffc0cb, #ffe6f2);
-  text-align: center;
-  z-index: 10;
-  animation: fadeIn 1s ease;
-}
-@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+  img {
+    width: 86%;
+    max-width: 380px;
+    border-radius: 25px;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.12);
+    margin: 20px 0;
+    transition: transform 0.4s;
+  }
+  img:hover { transform: scale(1.03); }
 
-#banner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 24px;
-  animation: popIn 1.5s ease;
-}
+  /* Hiệu ứng pháo hoa */
+  .firework {
+    position: fixed;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    pointer-events: none;
+    animation: explode 1s ease-out forwards;
+  }
+  @keyframes explode {
+    from { transform: scale(1); opacity: 1; }
+    to { transform: scale(3); opacity: 0; }
+  }
 
-/* 🎂 Ảnh bánh kem to và đẹp hơn */
-#banner img {
-  width: 320px;
-  height: auto;
-  border-radius: 50% / 35%;
-  box-shadow: 0 0 40px rgba(255,255,255,0.9), 0 0 20px rgba(255,192,203,0.8);
-  margin-bottom: 25px;
-  animation: cakePop 1.5s ease;
-  transform: scale(1);
-  transition: transform 0.8s ease;
-}
-#banner img:hover {
-  transform: scale(1.08);
-}
-@keyframes cakePop {
-  0% { transform: scale(0.3); opacity: 0; }
-  100% { transform: scale(1); opacity: 1; }
-}
-
-#banner h1 {
-  font-size: 30px;
-  color: #ff1493;
-  text-shadow: 1px 1px 2px #fff;
-  font-weight: bold;
-  animation: fadeIn 2s ease;
-}
-
-#password {
-  padding: 10px 14px;
-  border: 2px solid #ff1493;
-  border-radius: 10px;
-  font-size: 16px;
-  outline: none;
-  width: 240px;
-  text-align: center;
-}
-button {
-  margin-top: 16px;
-  background: #ff1493;
-  border: none;
-  color: #fff;
-  font-size: 16px;
-  padding: 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-button:hover { background: #ff69b4; }
-
-#error {
-  color: red;
-  margin-top: 10px;
-  font-weight: bold;
-  display: none;
-}
-
-/* --- Trang lời chúc --- */
-#main {
-  display: none;
-  text-align: center;
-  padding: 20px;
-  color: #4a2033;
-}
-h2 {
-  color: #ff1493;
-  font-size: 30px;
-  text-shadow: 2px 2px #fff;
-}
-.message {
-  background: rgba(255,255,255,0.7);
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  max-width: 700px;
-  margin: 0 auto;
-  line-height: 1.6;
-}
-
-/* --- Slide hình ảnh --- */
-.imageSlide {
-  display: none;
-  position: fixed;
-  inset: 0;
-  background: #000;
-  text-align: center;
-  color: white;
-  overflow: hidden;
-  animation: fadeIn 1.5s ease;
-}
-.imageSlide img {
-  max-width: 90%;
-  max-height: 75vh;
-  margin-top: 5vh;
-  border-radius: 16px;
-  box-shadow: 0 0 30px rgba(255,255,255,0.4);
-}
-.caption {
-  font-size: 20px;
-  margin-top: 20px;
-  text-shadow: 0 0 10px #ff69b4;
-  animation: fadeIn 2s ease;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; } 
-  to { opacity: 1; }
-}
-
-canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  pointer-events: none;
-}
+  /* Icon dễ thương bay bay */
+  .icon {
+    position: fixed;
+    animation: fly 7s linear infinite;
+    opacity: 0.85;
+  }
+  @keyframes fly {
+    0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+    100% { transform: translateY(-105vh) rotate(720deg); opacity: 0; }
+  }
+  /* Thêm nền trái tim nhỏ bay nhẹ */
+  .heart-bg {
+    position: fixed;
+    pointer-events: none;
+    animation: heartFloat 10s linear infinite;
+    opacity: 0.5;
+  }
+  @keyframes heartFloat {
+    0% { transform: translateY(0) scale(0.8); }
+    100% { transform: translateY(-120vh) scale(1.4); }
+  }
+  /* Hiệu ứng fade-in trang khi mở website */
+  body.loaded .page.active {
+    animation: introFade 1.2s ease forwards;
+  }
+  @keyframes introFade {
+    from { opacity: 0; transform: scale(0.95); }
+    to { opacity: 1; transform: scale(1); }
+  }
+  /* Hiệu ứng trái tim dễ thương bay nhẹ */
+  .hearts {
+    position: fixed;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 5;
+  }
+  .heart {
+    position: absolute;
+    bottom: -20px;
+    font-size: 14px; /* nhỏ hơn cho mobile */
+    opacity: 0.7;
+    animation: floatUp 4.5s linear infinite; /* chậm nhẹ cho đỡ rối */
+    position: absolute;
+    bottom: -20px;
+    font-size: 18px;
+    opacity: 0.7;
+    animation: floatUp 4s linear infinite;
+  }
+  @keyframes floatUp {
+    0% { transform: translateY(0) scale(1); opacity: 0.8; }
+    50% { opacity: 1; }
+    100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
+  }
 </style>
 </head>
 <body>
-
-<!-- Màn đăng nhập -->
-<div id="login">
-  <div id="banner">
-    <img src="OIP.jpeg" alt="Bánh kem sinh nhật">
-    <h1>🎉 Chúc Mừng Sinh Nhật Nguyễn Thị Kim Ngân 🎂</h1>
-  </div>
-  <input type="password" id="password" placeholder="Nhập mật khẩu...">
-  <button id="nextBtn">Next ➜</button>
-  <div id="error">Sai mật khẩu rồi nha 🥺</div>
+<div class="page active" id="page1">
+  <div class="cake">🎂💖</div>
+  <h1>Chúc Mừng Sinh Nhật<br>Nguyễn Thị Kim Ngân 🎉</h1>
+  <img src="https://i.pinimg.com/originals/7b/0e/3b/7b0e3bdfb93907c1f0d52c09b541d50d.jpg" alt="Birthday">
+  
 </div>
 
-<!-- Trang lời chúc -->
-<canvas id="fireworks"></canvas>
-<div id="main">
-  <h2>🎉 Chúc Mừng Sinh Nhật Nguyễn Thị Kim Ngân 🎂</h2>
-  <div class="message">
-    💖 Chúc bạn có một ngày sinh nhật thật ngọt ngào và tràn đầy hạnh phúc! <br><br>
-    Mong rằng hôm nay và mỗi ngày sau này đều tràn ngập tiếng cười, niềm vui và yêu thương 💕.<br><br>
-    Cảm ơn bạn vì luôn mang lại năng lượng tích cực cho mọi người xung quanh 🌸.<br><br>
-    Chúc tuổi mới của <b>Ngân</b> thêm xinh đẹp, may mắn và luôn rạng rỡ như ánh nến lung linh này 🎁💐🎂
-  </div>
-  <button id="nextImageBtn">Next ➜</button>
+<div class="page" id="page2">
+  <h1>🌸 Lời Chúc Đầu Tiên 🌸</h1>
+  <p>
+    Chúc Ngân một ngày sinh nhật thật ngọt ngào, tràn đầy yêu thương 💕<br>
+    Mong rằng mọi điều tuyệt vời nhất sẽ đến với Ngân trong tuổi mới 🌈<br>
+    Nụ cười luôn rạng rỡ như ánh mặt trời nhé ☀️💖
+  </p>
+  <img src="https://i.pinimg.com/originals/25/a1/5b/25a15b4f19b7322dcff0f92aee6e2ab5.jpg" alt="Slide 2">
+  
 </div>
 
-<!-- Slide 1 -->
-<div class="imageSlide" id="slide1">
-  <img src="480591280_1340868617092435_5708492407284149770_n.jpg" alt="">
-  <p class="caption">🌷 Cô gái trong hình thật dễ thương, ánh mắt hiền lành và nụ cười khiến ai cũng phải mỉm cười 💖</p>
-  <button onclick="nextSlide(2)">Next ➜</button>
+<div class="page" id="page3">
+  <h1>🌷 Lời Chúc Tiếp Theo 🌷</h1>
+  <p>
+    Chúc Ngân luôn tự tin, mạnh mẽ và hạnh phúc trên hành trình phía trước 🌈<br>
+    Dù cuộc sống có thế nào, hãy nhớ rằng Ngân là cô gái đặc biệt và đáng yêu nhất 🎀<br>
+    Chúc tuổi mới của Ngân thật nhiều niềm vui và may mắn nhé 💫
+  </p>
+  <img src="https://i.pinimg.com/originals/b7/bd/32/b7bd32df1e2a8745a4d741b29a6cb4c2.jpg" alt="Slide 3">
+  
 </div>
 
-<!-- Slide 2 -->
-<div class="imageSlide" id="slide2">
-  <img src="473306466_1311856953326935_2056956771995249315_n.jpg" alt="">
-  <p class="caption">💐 Dịu dàng như nắng sớm mai,<br>Gặp em một chút, lòng ai xao xuyến 💞</p>
-  <button onclick="nextSlide(3)">Next ➜</button>
-</div>
-
-<!-- Slide 3 -->
-<div class="imageSlide" id="slide3">
-  <img src="gen-n-z7141954342367_af03f507a0077d6d43718aeb398af511.jpg" alt="">
-  <p class="caption">🌸 Duyên dáng, ngọt ngào như hương hoa,<br>Chúc Ngân mãi xinh và vui như hôm nay 💕</p>
-  <button onclick="endSlides()">🎂 Kết thúc 💖</button>
+<div class="page" id="page4">
+  <div class="cake">🎂🎉💖</div>
+  <h1>🎁 Happy Birthday Nguyễn Thị Kim Ngân 🎁</h1>
+  <p>
+    Chúc Ngân luôn nhận được những điều xinh đẹp và tuyệt vời nhất 💝<br>
+    Cảm ơn vì sự dễ thương, hiền lành và niềm vui mà Ngân mang đến 🌸<br>
+    Mãi luôn rạng rỡ, hạnh phúc và thành công nhé 💕
+  </p>
+  
 </div>
 
 <script>
-// ====== Kiểm tra mật khẩu ======
-const nextBtn = document.getElementById("nextBtn");
-const passwordInput = document.getElementById("password");
-const loginDiv = document.getElementById("login");
-const mainDiv = document.getElementById("main");
-const errorMsg = document.getElementById("error");
+let current = 1;
+function nextPage(num) {
+  document.getElementById('page' + current).classList.remove('active');
+  const next = document.getElementById('page' + num);
+  next.classList.add('active');
+  current = num;
 
-const CORRECT_PASS = "123456789Hieu";
-
-nextBtn.addEventListener("click", checkPass);
-passwordInput.addEventListener("keyup", (e)=>{ if(e.key === "Enter") checkPass(); });
-
-function checkPass(){
-  const pass = passwordInput.value.trim();
-  if(pass === CORRECT_PASS){
-    loginDiv.style.display = "none";
-    mainDiv.style.display = "block";
-    startFireworks();
-  } else {
-    errorMsg.style.display = "block";
-    setTimeout(()=> errorMsg.style.display = "none", 1500);
+  for (let i = 0; i < 25; i++) {
+    const f = document.createElement('div');
+    f.className = 'firework';
+    f.style.left = Math.random() * 100 + 'vw';
+    f.style.top = Math.random() * 100 + 'vh';
+    f.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 70%)`;
+    document.body.appendChild(f);
+    setTimeout(() => f.remove(), 1000);
   }
 }
 
-// ====== Next sang hình ảnh đầu tiên ======
-document.getElementById("nextImageBtn").addEventListener("click", ()=>{
-  mainDiv.style.display = "none";
-  document.getElementById("slide1").style.display = "block";
-});
+const cuteIcons = ['💖','✨','🌸','🎀','💫','🦋','⭐','🎈','💗','💝','💕','🌟','🍰','🧸','🐰','🌈'];
+// Tạo trái tim bay tự động (tối ưu cho mobile)
+    setInterval(() => {
+      const container = document.getElementById('heart-container');
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.textContent = '💖';
 
-// ====== Chuyển slide ======
-function nextSlide(num){
-  document.querySelectorAll(".imageSlide").forEach(s => s.style.display="none");
-  document.getElementById(`slide${num}`).style.display = "block";
-}
+      // Tối ưu mobile: tránh quá nhiều trái tim
+      if (container.childElementCount > 10) return;
 
-function endSlides(){
-  document.querySelectorAll(".imageSlide").forEach(s => s.style.display="none");
-  alert("🎉 Hết rồi nè! Chúc Ngân luôn xinh đẹp, vui tươi và thật hạnh phúc 💕");
-}
+      heart.style.left = Math.random() * 90 + 'vw';
+      heart.style.animationDuration = 4 + Math.random() * 2 + 's';
+      heart.style.fontSize = (12 + Math.random() * 10) + 'px'; // phù hợp màn hình nhỏ
+      container.appendChild(heart);
+      setTimeout(() => heart.remove(), 7000);
+    }, 1000);(() => {
+  const i = document.createElement('div');
+  i.className = 'icon';
+  i.textContent = cuteIcons[Math.floor(Math.random() * cuteIcons.length)];
+  i.style.left = Math.random() * 100 + 'vw';
+  i.style.bottom = '-8vh';
+  i.style.fontSize = Math.random() * 25 + 22 + 'px';
+  i.style.animationDuration = (Math.random() * 4 + 5) + 's';
+  document.body.appendChild(i);
+  setTimeout(() => i.remove(), 9000);
+}, 600);
+  // Tự động chuyển trang mỗi 5 giây
+setInterval(() => {
+  let next = current + 1;
+  if (next > 4) next = 1;
+  nextPage(next);
+}, 5000);
 
-// ====== Hiệu ứng pháo hoa ======
-function startFireworks(){
-  const canvas = document.getElementById("fireworks");
-  const ctx = canvas.getContext("2d");
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+// Hiệu ứng mở trang
+window.onload = () => {
+  document.body.classList.add('loaded');
+};
 
-  const particles = [];
-  class Particle{
-    constructor(x,y,color){
-      this.x=x; this.y=y; this.color=color;
-      this.vx=(Math.random()-0.5)*6;
-      this.vy=(Math.random()-0.8)*6;
-      this.alpha=1; this.size=2+Math.random()*2;
-    }
-    update(){
-      this.x+=this.vx; this.y+=this.vy;
-      this.vy+=0.05; this.alpha-=0.01;
-    }
-    draw(){
-      ctx.globalAlpha=this.alpha;
-      ctx.fillStyle=this.color;
-      ctx.beginPath();
-      ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-      ctx.fill();
-      ctx.globalAlpha=1;
-    }
-  }
-
-  function createFirework(){
-    const x=Math.random()*canvas.width;
-    const y=Math.random()*canvas.height/2;
-    const colors=["#ff4081","#ffd700","#00e676","#00b0ff","#ff6e40"];
-    const color=colors[Math.floor(Math.random()*colors.length)];
-    for(let i=0;i<50;i++) particles.push(new Particle(x,y,color));
-  }
-
-  function animate(){
-    ctx.fillStyle="rgba(0,0,0,0.15)";
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-    for(let i=particles.length-1;i>=0;i--){
-      const p=particles[i];
-      p.update(); p.draw();
-      if(p.alpha<=0) particles.splice(i,1);
-    }
-    requestAnimationFrame(animate);
-  }
-
-  setInterval(createFirework,700);
-  animate();
-}
 </script>
+  <!-- Hiệu ứng trái tim dễ thương -->
+  <div class="hearts" id="heart-container"></div>
+
+  <script>
+    // Tạo trái tim bay tự động
+    setInterval(() => {
+      const container = document.getElementById('heart-container');
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.textContent = '💖';
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.animationDuration = 3 + Math.random() * 3 + 's';
+      heart.style.fontSize = (16 + Math.random() * 14) + 'px';
+      container.appendChild(heart);
+      setTimeout(() => heart.remove(), 6000);
+    }, 800);
+  </script>
 </body>
 </html>
