--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <div class="page active" id="page1">
   <div class="cake">🎂💖</div>
   <h1>Chúc Mừng Sinh Nhật<br>Nguyễn Thị Kim Ngân 🎉</h1>
-  <img src="https://i.pinimg.com/originals/7b/0e/3b/7b0e3bdfb93907c1f0d52c09b541d50d.jpg" alt="Birthday">
+  <img src="z7141954347992_01fc0112130cdebda054ebd0d8491e7b.jpg" alt="Birthday">
   
 </div>
 
@@ -165,7 +165,7 @@
     Mong rằng mọi điều tuyệt vời nhất sẽ đến với Ngân trong tuổi mới 🌈<br>
     Nụ cười luôn rạng rỡ như ánh mặt trời nhé ☀️💖
   </p>
-  <img src="https://i.pinimg.com/originals/25/a1/5b/25a15b4f19b7322dcff0f92aee6e2ab5.jpg" alt="Slide 2">
+  <img src="z7141954342367_af03f507a0077d6d43718aeb398af511.jpg" alt="Slide 2">
   
 </div>
 
@@ -176,7 +176,7 @@
     Dù cuộc sống có thế nào, hãy nhớ rằng Ngân là cô gái đặc biệt và đáng yêu nhất 🎀<br>
     Chúc tuổi mới của Ngân thật nhiều niềm vui và may mắn nhé 💫
   </p>
-  <img src="https://i.pinimg.com/originals/b7/bd/32/b7bd32df1e2a8745a4d741b29a6cb4c2.jpg" alt="Slide 3">
+  <img src="z7203904822246_913fa2275d4ab23eae66ad52ce50b185.jpg" alt="Slide 3">
   
 </div>
 
