--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   /* ẢNH tối ưu mobile */
   img {
     width: 100%;
-    max-width: 340px;
+    max-width: 320px;
     height: auto;
     border-radius: 22px;
     box-shadow: 0 5px 22px rgba(0,0,0,0.15);
@@ -47,7 +47,13 @@
     display: block;
   }
 
-  /* ✅ FIX ảnh slide 2: không che chữ */
+  /* Giảm kích thước slide 3 */
+  #page3 img {
+    max-height: 220px;
+    object-fit: cover;
+  }
+
+  /* FIX ảnh slide 2 */
   #page2 img {
     max-height: 240px;
     object-fit: cover;
@@ -73,7 +79,6 @@
     color: #444;
     font-size: 1.1em;
     line-height: 1.7;
-    max-width: 95%;
   }
 
   /* Firework */
@@ -112,16 +117,48 @@
     100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
   }
 
+  /* Nút Bí Mật */
+  .secret-btn {
+    margin-top: 20px;
+    padding: 12px 20px;
+    background: #ff72b5;
+    color: white;
+    border-radius: 14px;
+    font-size: 1.1em;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  }
+  #secret-text {
+    margin-top: 15px;
+    font-size: 1.2em;
+    color: #ff2e9b;
+    display: none;
+  }
 </style>
 </head>
 
 <body>
+
+<!-- YÊU CẦU MẬT KHẨU -->
+<script>
+window.onload = function() {
+  let pw = prompt("Hãy nhập mật khẩu đi không biết là giận đó🌚🌚🌚");
+  if (pw !== "20-11-2004") {
+    alert("Sai rồi nha 😤 Không được vô đâu!");
+    document.body.innerHTML = "";
+  }
+};
+</script>
 
 <!-- PAGE 1 -->
 <div class="page active" id="page1">
   <div class="cake">🎂💖</div>
   <h1>Chúc Mừng Sinh Nhật<br>Nguyễn Thị Kim Ngân 🎉</h1>
   <img src="z7141954347992_01fc0112130cdebda054ebd0d8491e7b.jpg" alt="Birthday">
+
+  <div class="secret-btn" onclick="showSecret()">Bấm nhẹ nhẹ có bí mật nè 😳</div>
+  <div id="secret-text">Bí mật này không xem được đâu 🙈</div>
 </div>
 
 <!-- PAGE 2 -->
@@ -129,7 +166,7 @@
   <h1>🌸 Lời Chúc Đầu Tiên 🌸</h1>
   <p>
     Chúc Ngân một ngày sinh nhật thật ngọt ngào và đầy yêu thương 💕<br>
-    Mọi điều tốt đẹp nhất sẽ đến với Ngân trong tuổi mới 🌈<br>
+    Mọi điều tốt đẹp nhất sẽ đến với Ngân 🌈<br>
     Luôn rạng rỡ và hạnh phúc nhé ☀️💖
   </p>
   <img src="z7141954342367_af03f507a0077d6d43718aeb398af511.jpg" alt="Slide 2">
@@ -151,7 +188,7 @@
   <div class="cake">🎂🎉💖</div>
   <h1>🎁 Happy Birthday Nguyễn Thị Kim Ngân 🎁</h1>
   <p>
-    Chúc Ngân nhận được những điều tuyệt vời và dễ thương nhất 💝<br>
+    Chúc Ngân nhận được những điều tuyệt vời nhất 💝<br>
     Cảm ơn vì sự hiền lành và niềm vui mà Ngân mang lại 🌸<br>
     Chúc Ngân luôn rạng rỡ, thành công và hạnh phúc 💕
   </p>
@@ -160,14 +197,15 @@
 <div class="hearts" id="heart-container"></div>
 
 <script>
+// Slideshow
 let current = 1;
-
 function nextPage(num) {
   document.getElementById("page" + current).classList.remove("active");
   const next = document.getElementById("page" + num);
   next.classList.add("active");
   current = num;
 
+  // Firework
   for (let i = 0; i < 18; i++) {
     const f = document.createElement('div');
     f.className = 'firework';
@@ -178,13 +216,13 @@ function nextPage(num) {
     setTimeout(() => f.remove(), 1000);
   }
 }
-
 setInterval(() => {
   let next = current + 1;
   if (next > 4) next = 1;
   nextPage(next);
 }, 5000);
 
+// Hearts
 setInterval(() => {
   const container = document.getElementById('heart-container');
   if (container.childElementCount > 12) return;
@@ -199,6 +237,11 @@ setInterval(() => {
   container.appendChild(heart);
   setTimeout(() => heart.remove(), 6000);
 }, 800);
+
+// SECRET
+function showSecret() {
+  document.getElementById("secret-text").style.display = "block";
+}
 </script>
 
 </body>
