--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ window.onload = function() {
   <div id="secretImage">
     <p style="color:#ff2e9b; font-size:1.1em;">💖 Đây là bí mật dành riêng cho Ngân 💖<br>"Tui thật sự rất quý Ngân… nhiều hơn Ngân nghĩ đó."</p>
     <a href="https://example.com" target="_blank">
-      <img src="secret_image.jpg" alt="Bí mật">
+      <img src="z7203904822290_12fb4f82103028771b5fbb70b3269bbe.jpg" alt="Bí mật">
     </a>
   </div>
 </div>
