--- a/index.html
+++ b/index.html
@@ -181,13 +181,17 @@ window.onload = function() {
 
   <!-- Thanh bí mật cuối page 4 -->
   <div id="secretBox">🔒 Nhấn để xem bí mật</div>
-  <div id="secretImage">
-    <p style="color:#ff2e9b; font-size:1.1em;">💖 Đây là bí mật dành riêng cho Ngân 💖<br>"Tui thật sự rất quý Ngân… nhiều hơn Ngân nghĩ đó."</p>
+  <div id="secretImage" style="display:none; margin-top:15px; text-align:center;">
     <a href="https://example.com" target="_blank">
       <img src="z7203904822290_12fb4f82103028771b5fbb70b3269bbe.jpg" alt="Bí mật">
     </a>
-  </div>
+    <p style="color:#ff2e9b; font-size:1.1em; margin-top:10px;">
+      💖 Ngân ơi, tui thật sự quý Ngân rất nhiều, mỗi lúc nghĩ tới Ngân là tui lại cười,  
+      và tui muốn Ngân biết rằng Ngân đặc biệt với tui hơn cả những gì Ngân tưởng tượng đó 💕  
+      Mong Ngân luôn vui vẻ, rạng rỡ và hạnh phúc mỗi ngày 🌸
+    </p>
 </div>
+
 
 <div class="hearts" id="heart-container"></div>
 
