--- a/index.html
+++ b/index.html
@@ -1,132 +1,3 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>🎂 Chúc Mừng Sinh Nhật Nguyễn Thị Kim Ngân 🎉</title>
-
-<style>
-  * { box-sizing: border-box; }
-  body {
-    touch-action: pan-y;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    background: radial-gradient(circle at top, #ffd6e8, #fff8e6);
-    overflow: hidden;
-  }
-
-  .page {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: 1s ease;
-    padding: 15px;
-    text-align: center;
-    transform: translateY(20px);
-  }
-
-  .page.active {
-    opacity: 1;
-    transform: translateY(0);
-    z-index: 2;
-  }
-
-  img {
-    width: 100%;
-    max-width: 320px;
-    height: auto;
-    border-radius: 22px;
-    box-shadow: 0 5px 22px rgba(0,0,0,0.15);
-    margin: 20px 0;
-    display: block;
-  }
-
-  #page2 img { max-height: 240px; object-fit: cover; }
-  #page3 img { max-height: 220px; object-fit: cover; }
-
-  .cake {
-    font-size: 4em;
-    animation: float 3s ease-in-out infinite;
-  }
-  @keyframes float {
-    0%,100% { transform: translateY(0); }
-    50% { transform: translateY(-12px); }
-  }
-
-  h1 {
-    color: #ff2e9b;
-    font-size: 1.9em;
-    margin-top: 10px;
-    text-shadow: 0 0 15px #ff8ecf;
-  }
-
-  p {
-    color: #444;
-    font-size: 1.1em;
-    line-height: 1.7;
-  }
-
-  .firework {
-    position: fixed;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    pointer-events: none;
-    animation: explode 1s ease-out forwards;
-  }
-  @keyframes explode {
-    from { transform: scale(1); opacity: 1; }
-    to { transform: scale(3); opacity: 0; }
-  }
-
-  .hearts {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    pointer-events: none;
-    overflow: hidden;
-    z-index: 5;
-  }
-  .heart {
-    position: absolute;
-    bottom: -20px;
-    font-size: 18px;
-    opacity: 0.7;
-    animation: floatUp 4s linear infinite;
-  }
-  @keyframes floatUp {
-    0% { transform: translateY(0) scale(1); opacity: 0.8; }
-    50% { opacity: 1; }
-    100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
-  }
-
-  /* Nút Bí Mật */
-  #secretBox {
-    margin-top: 20px;
-    cursor: pointer;
-    font-size: 1.2em;
-    color: #ff2e9b;
-    text-decoration: underline;
-  }
-
-  #secretImage {
-    display: none;
-    margin-top: 15px;
-    text-align: center;
-  }
-  #secretImage img {
-    max-width: 300px;
-    border-radius: 20px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-  }
-</style>
-</head>
-
 <body>
 
 <!-- YÊU CẦU MẬT KHẨU TRƯỚC KHI VÀO WEBSITE -->
@@ -181,17 +52,19 @@ window.onload = function() {
 
   <!-- Thanh bí mật cuối page 4 -->
   <div id="secretBox">🔒 Nhấn để xem bí mật</div>
-  <div id="secretImage" style="display:none; margin-top:15px; text-align:center;">
+  
+  <!-- Ảnh và câu bí mật -->
+  <div id="secretImage" style="display:none; text-align:center; margin-top:20px; max-width:90%; margin-left:auto; margin-right:auto;">
     <a href="https://example.com" target="_blank">
-      <img src="z7203904822290_12fb4f82103028771b5fbb70b3269bbe.jpg" alt="Bí mật">
+      <img src="z7203904822290_12fb4f82103028771b5fbb70b3269bbe.jpg" alt="Bí mật" style="max-width:100%; height:auto; border-radius:20px; box-shadow:0 4px 15px rgba(0,0,0,0.2); display:block; margin:0 auto;">
     </a>
-    <p style="color:#ff2e9b; font-size:1.1em; margin-top:10px;">
+    <p style="color:#ff2e9b; font-size:1.1em; line-height:1.5; margin-top:12px; text-align:center;">
       💖 Ngân ơi, tui thật sự quý Ngân rất nhiều, mỗi lúc nghĩ tới Ngân là tui lại cười,  
-      và tui muốn Ngân biết rằng Ngân đặc biệt với tui hơn cả những gì Ngân tưởng tượng đó 💕  
+      và tui muốn Ngân biết rằng Ngân thật sự đặc biệt với tui hơn cả những gì Ngân tưởng tượng 💕  
       Mong Ngân luôn vui vẻ, rạng rỡ và hạnh phúc mỗi ngày 🌸
     </p>
+  </div>
 </div>
-
 
 <div class="hearts" id="heart-container"></div>
 
@@ -256,4 +129,3 @@ document.getElementById('secretBox').onclick = function() {
 </script>
 
 </body>
-</html>
