--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <!-- YÊU CẦU MẬT KHẨU TRƯỚC KHI VÀO WEBSITE -->
 <script>
 window.onload = function() {
-  let pw = Mật Khẩu ("Hãy nhập mật khẩu đi không biết là giận đó🌚🌚🌚");
+  let pw = prompt("Hãy nhập mật khẩu đi không biết là giận đó🌚🌚🌚");
   if (pw !== "20-11-2004") {
     alert("Sai rồi nha 😤 Không được vô đâu!");
     document.body.innerHTML = "";
