--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@ window.onload = function() {
       <img src="z7203904822290_12fb4f82103028771b5fbb70b3269bbe.jpg" alt="Bí mật">
     </a>
     <p style="color:#ff2e9b; font-size:1.1em; margin-top:10px;">
-      💖 Ngân ơi, tui thật sự quý Ngân rất nhiều, mỗi lúc nghĩ tới Ngân là tui lại cười,  
-      và tui muốn Ngân biết rằng Ngân đặc biệt với tui hơn cả những gì Ngân tưởng tượng đó 💕  
-      Mong Ngân luôn vui vẻ, rạng rỡ và hạnh phúc mỗi ngày 🌸
+      💖 Happy Birthday chúc Ngân có một sinh nhật thật vui vẻ bước sang tuổi mới Ngân phải cười nhiều hơn đừng suy nghĩ tiêu cực 
+Chúc Ngân sau này trong tay có tiền,trên môi có nụ cười và mỗi ngày là một hạnh phúc
+ 🌸
     </p>
 </div>
 
